<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:text="@string/weight_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:text="@string/height_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/height" />

    <android.widget.RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/cm">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/meter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meters"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeters"/>

    </android.widget.RadioGroup>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/function"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/function" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />

</androidx.appcompat.widget.LinearLayoutCompat>